# moderation-service

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  docker-compose.yml  justfile
.github/workflows/: lint-and-test.yml
benchmark/: CMakeLists.txt
benchmark/performance/: text_processing_benchmark.cpp
configs/: dev.yaml  prod.yaml
include/: tinylog.hpp
include/config/: config.hpp  test_constants.hpp  timeouts.hpp
include/interceptors/: log_sink.hpp  logger.hpp  logger_interceptor.hpp
include/repository/: imoderation_repository.hpp  moderation_record.hpp
src/moderationservice/: main.cpp  server.cpp  settings.cpp
src/moderationservice/grpc/: moderation.grpc.pb.cc  moderation.grpc.pb.h  moderation.pb.cc  moderation.pb.h
src/moderationservice/handler/: handler.cpp  handler.hpp
src/moderationservice/kafka/: kafkaclient.cpp  kafkaclient.hpp
src/moderationservice/model/: constants.cpp  constants.hpp  model_utils.cpp  model_utils.hpp  unicode_constants.hpp
src/moderationservice/repository/: repository.cpp  repository.hpp
src/moderationservice/server/: server.cpp  server.hpp
src/moderationservice/service/: leetspeak_normalization.cpp  leetspeak_normalization.hpp  service.cpp  service.hpp  text_normalization.cpp  text_normalization.hpp  text_processor.cpp  text_processor.hpp  word_checker.cpp  word_checker.hpp
tests/: CMakeLists.txt
tests/mocks/: fake_moderation_repository.cpp  fake_moderation_repository.hpp  mock_kafka_client.cpp  mock_kafka_client.hpp  test_utils.cpp  test_utils.hpp
tests/unit/handler/: handler_test.cpp
tests/unit/repository/: repository_test.cpp
tests/unit/service/: leetspeak_normalization_test.cpp  moderation_service_test.cpp  text_normalization_test.cpp  text_processor_test.cpp  word_checker_test.cpp
tools/: common.just  install_dev_tools.sh  load_envs.sh
